# archaic

./: .gitignore  pyproject.toml  test.ipynb  test.py  test_.py  test_cities.py  test_feature_class.py  test_glaciers.py  test_mines.py
.data/: .canada.geodatabase-conch  world.geodatabase
archaic/: __init__.py  _info.py  archaic.py  feature_class.py  info.py  models.py  predicate.py
