[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archaic"
version = "0.1.4"
authors = [
  { name="Jiro Shirota", email="jshirota@gmail.com" },
]
description = "Simplifies handling of ArcPy rows"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/jshirota/archaic"
"Bug Tracker" = "https://github.com/jshirota/archaic/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.15.11",
]
